# ufes-semester2-prog2

./: .gitignore  README.md  instrucoes biblio.txt  livro.txt
agenda/: CMakeLists.txt  a.out  agenda.c
agenda2/: CMakeLists.txt  main.c
aula-1/: entradas.txt  ex1  ex1.c  ex2  ex2.c  hoje  instrucoes biblio.txt  panamericano.c  saida
aula-2/: teste  teste.c
aula17-10/: teste  teste.c
banco/: CMakeLists.txt  a.out  banco.c  banco.txt  ideas.txt  main  new_bank.c
catalogo/: CMakeLists.txt  a.out  academico.c  academico.h  catalogo.h  catalogo.txt  main.c
ccomp/: aluno.c  aluno.h  binario  ccomp  ccomp.c  data.c  data.h  entrada  leitura  modoinicial.h  turma.c  turma.h
cursos/: aux.h  grade.c  grade.h  ideia.txt  student.h
formas/: circulo.c  circulo.h  comodo.c  comodo.h  entrada  main  main.c  planta.c  planta.h  ponto.c  ponto.h  retangulo.c  retangulo.h  saida  triangulo.c  triangulo.h
lista-exercicio-1/: abrir  abrir.c  anotacoes  binario  binario.c  saida
lista-varejao1/: 1.c  2.c  entrada.txt  entrada_2.txt  ideias1.txt  jogo  main  main2  saida_2.txt  teste  teste.c
prova1/: competicao.c  (+8 more)
trab2/: CMakeLists.txt  apto.c  apto.h  casa.c  catalogo.c  catalogo.h  categoria.c  categoria.h  espec.c  espec.h  imovel.c  imovel.h  main  main.c  modificacoes.txt  retangulo.c  retangulo.h  test  trapezio.c  triangulo.c  triangulo.h
trab2/boca/: boca.c
trab2en/: CMakeLists.txt  apt.c  catalog.c  catalog.h  category.c  category.h  house.c  house.h  lot.c  lot.h  main  main.c  properties.c  properties.h  rectangle.c  saida.txt  trapezoid.c  triangle.c
(+211 files in other folders)
